# cmake_kuru_c

./: .devcontainer.json  .gitmodules  CMakeLists.txt  Dockerfile
include/: sandbox.h
src/: error_manager.c  error_manager.h  sandbox.c  test.c
tests/: CMakeLists.txt  test_sandbox.c
